updated dark mode bug and sign out bug for smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,14 @@
   text-align: center;
 }
 
+body.light {
+  background-color: white;
+}
+
+body.dark {
+  background-color: black;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
